# cisco-ise-automation

./: .env.example  .gitignore  LICENSE  Makefile  README.md  blog-post-2-tacacs-lockout.md  blog-post.md
ansible/: ansible.cfg  requirements.yml
ansible/inventory/: hosts.yml
ansible/inventory/group_vars/: all.yml  ise.yml  switches.yml
ansible/playbooks/: ise_ad_join.yml  ise_authz_profiles.yml  ise_bootstrap.yml  ise_guest_webauth.yml  ise_mab_iot.yml  ise_network_devices.yml  ise_policy_wireless_dot1x.yml  ise_posture.yml  ise_tacacs_admin.yml  ise_tacacs_command_sets.yml  ise_trustsec.yml  radius_smoke_test.yml  switch_aaa_dot1x.yml  switch_aaa_safe.yml  wlc_aaa.yml  wlc_discover.yml  wlc_guest_ssid.yml  wlc_tacacs.yml  wlc_wlan_dot1x.yml
ansible/vault/: secrets.example.yml
backups/: README.md
docs/: 01-vm-install.md
python/: pyproject.toml
python/ise_api/: __init__.py  audit.py  client.py  endpoints.py  nads.py  policy.py  recommendations.py
python/scripts/: audit_deep.py  audit_sample.py  bulk_import_nads.py  export_config_backup.py  health_check.py  restore_config.py
python/templates/: report.html.j2
python/tests/: test_client.py
switch_configs/templates/: aaa.j2  csr_aaa_paste.j2  dot1x_access_port.j2  dot1x_global.j2
